--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
+.app {
+  background-color:#f3e8eb;
+  padding-top: 10px;
+  padding-bottom: 50px;
+  height: 100%;
+}
+
+.header {
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 36px;
+  margin-top: 5px;
+}
+
+.activities-list {
+  list-style: none;
+  text-align: center;
+}
 
 .card {
   margin-left: auto;
@@ -16,4 +36,31 @@
 
 .card-image {
   width: 50%;
+}
+
+.card-name, .card-location, .card-address, .card-completed {
+  background-color: white;
+}
+
+.card-name {
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+.card-location {
+  font-weight: 250;
+  margin-bottom: 5px;
+}
+
+.card-address {
+  font-weight: 200;
+  font-style: italic;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.card-completed {
+  margin-top: 5px;
+  font-weight: 200;
+  font-size: 14px;
 }
