--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,3 +64,56 @@
   font-weight: 200;
   font-size: 14px;
 }
+
+.form-div {
+  border: solid 5px #FF327C;
+  box-shadow: 3px 2px 22px 10px rgba(44, 42, 43, 0.235);
+  margin-top: 5px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  background-color: white;
+}
+
+.form input {
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-bottom: 2px;
+  margin-top: 10px;
+  width: 500px;
+  background-color:  rgba(238, 237, 237, 0.779);
+  border-radius: 5px;
+}
+
+.form label {
+  margin-top: 10px;
+  font-style: italic;
+  font-size: 14px;
+}
+
+.form button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100px;
+  background-color: rgba(62, 62, 62, 0.624);
+  color: white;
+  font-weight: 900;
+  text-transform: uppercase;
+  height: 25px;
+  border-radius: 3px;
+}
+
+.form-header {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
